--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -31,10 +31,10 @@
 
       <form id="login-form">
         <label for="email">E-mail</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email" required>
 
         <label for="password">Mot de passe</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password" required>
 
         <input type="submit" value="Se connecter">
       </form>
