--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -43,12 +43,14 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		
-		<div class="edit-projects">
-			<h2>Mes Projets</h2>
-			<i class="fa-regular fa-pen-to-square black_icon"></i>
-			<button>modifier</button>
-		</div>
+		<div class="portfolio-header">
+			<h2>Mes Projets</h2>			
+			<div class="edit-projects">
+				
+				<i class="fa-regular fa-pen-to-square black_icon"></i>
+				<button>modifier</button>
+			</div>
+		</div>	
 		<div class="filters"></div>
 
 		
