--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -39,7 +39,7 @@
         <input type="submit" value="Se connecter">
       </form>
 
-	  <p class="p_erreur"></p>
+	  <p id="p_erreur"></p>
 
       <a href="#" class="forgot-password">Mot de passe oublié</a>
     </section>
