--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -48,17 +48,19 @@
 				<h3>Ajout photo</h3>
 
 				<div class="upload-zone">
+					<div class="preview-container"></div>
 					<i class="fa-regular fa-image"></i>
-					<button type="button">+ Ajouter photo</button>
+					<button type="button" id="upload-btn">+ Ajouter photo</button>
 					<p>jpg, png : 4mo max</p>
+					<input type="file" id="image" name="image" accept="image/png, image/jpeg" hidden>
 				</div>
 
-				<form>
+				<form id="add-photo-form">
 					<label for="title">Titre</label>
-					<input type="text" id="title">
+					<input type="text" id="title" name="title">
 
 					<label for="category">Catégorie</label>
-					<select id="category"></select>
+					<select id="category" name="category"></select>
 
 					<div class="modal-separator"></div>
 
