Bouton "valider" en vert

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -78,7 +78,7 @@
 
 					<div class="modal-separator"></div>
 
-					<button type="submit">Valider</button>
+					<button class="modal-submit-btn" type="submit">Valider</button>
 				</form>
 			</div>
 
